--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "can-fixture": "^0.4.0-pre.1",
     "can-set": "^0.6.0-pre.3",
     "can-stache": "^3.0.0-pre.1",
-    "steal-stache": "^3.0.0-pre.1"
+    "steal-stache": "^3.0.0-pre.1",
+    "can-route": "^3.0.0-pre.3"
   },
   "devDependencies": {
     "jshint": "^2.9.1",
